# Non-Linear-Anisotropic-Diffussion

./: .astylerc  .gitignore  CMakeLists.txt  LICENSE.txt  ReadMe.md
data/: in.ppm
include/: pm_ocl.hpp  ppm_image.hpp
kernel/: kernel.cl
source/: CMakeCache.txt  Makefile  cmake_install.cmake  main.cpp  pm  pm.c  pm.h  pm_ocl.cpp  ppm_image.cpp
